# pdal-ign-plugin

./: .clang-format  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.pdal  Makefile  README.md  RELEASE_NOTES.md  environment.yml  environment_docker.yml  main.py  pyproject.toml
.github/workflows/: cicd_deploy.yml  cicd_docker.yml  cicd_release.yml  cicd_test.yml  cicd_test_windows.yml
ci/: build.bat  build.sh  launch_test.sh
doc/: _doc_model_plugIN.md  classify_by_distance.md  classify_by_geo.md  grid_decimation.md  grid_radius_assign.md  grid_radius_search.md  radius_assign.md
examples/: README.md  demo_script.py  run_custom_script_in_docker_image.sh
examples/model_hight/: calculate_hight_bridge.py
examples/model_mnt/: calculate_mnt_bridge.py
macro/: ex_filtering_points.py  ex_filtering_points2.py  ex_filtering_points_with_add_attributs.py  ex_filtering_points_with_add_dimensions.py  macro.py
pdal_ign_macro/: macro.py  main_preprocessing_mnx.py  mark_points_to_use_for_digital_models_with_new_dimension.py  reassign_fieds_classification.py  version.py
scripts/: ex_filtering_points.py  ex_filtering_points_with_add_dimensions.py  mark_points_to_use_for_digital_models_with_new_dimension.py
src/filter_classify_by_distance/: CMakeLists.txt  ClassifyByDistanceFilter.cpp  ClassifyByDistanceFilter.hpp
src/filter_classify_by_geo/: CMakeLists.txt  ClassifyByGeo.cpp  ClassifyByGeo.hpp
src/filter_grid_decimation/: CMakeLists.txt  GridDecimationFilter.cpp  GridDecimationFilter.hpp  grid_decimationFilter.cpp  grid_decimationFilter.hpp
src/filter_radius_assign/: CMakeLists.txt  RadiusAssignFilter.cpp  RadiusAssignFilter.hpp  radius_assignFilter.cpp  radius_assignFilter.hpp
src/filter_radius_search/: CMakeLists.txt  radius_searchFilter.cpp  radius_searchFilter.hpp
test/: test_classify_by_distance.py  test_classify_by_geo.py  test_grid_decimation.py  test_macro.py  test_radius_assign.py  test_radius_search.py  test_remove_dimension.py  utils.py  version.py
test/data/: 4_6_crop.geojson  4_7.las  test_data_1639_1455_LA93_IGN69.las
test/data/buffer/: test_data_77055_627755_LA93_IGN69.laz  test_data_77055_627760_LA93_IGN69_extra_dims.laz
test/data/lines_3d/: Points_virtuels_lines_2d_77055_627760.geojson  Points_virtuels_lines_3d_77055_627760.geojson  points_virtuels.geojson
test/data/mnx/input/: 68.laz  bat.laz  corse.laz  crop_1.laz  crop_2.laz  crop_3.laz  pont.laz
test/data/mnx/reference/: 68.laz  bat.laz  corse.laz  crop_1.laz  crop_2.laz  crop_3.laz  pont.laz
test/data/points_3d/: Points_virtuels_77055_627755.geojson  Points_virtuels_77055_627760.geojson
test/pdal_ign_macro/: test_mark_points_to_use_for_digital_models_with_new_dimension.py  test_preprocessing_mnx.py
test/scripts/: test_mark_points_to_use_for_digital_models_with_new_dimension.py
